crates/lash/tests/ui/session_turn_run_requires_scope.stderr
error[E0061]: this method takes 1 argument but 0 arguments were supplied
 --> tests/ui/session_turn_run_requires_scope.rs:2:58
  |
2 |     let _ = session.turn(lash::TurnInput::text("hello")).run().await;
  |                                                          ^^^-- argument #1 of type `ScopedEffectController<'_>` is missing
  |
note: method defined here
 --> src/turn.rs
  |
  |     pub async fn run(
  |                  ^^^
help: provide the argument
  |
2 |     let _ = session.turn(lash::TurnInput::text("hello")).run(/* ScopedEffectController<'_> */).await;
  |                                                              ++++++++++++++++++++++++++++++++
